# Ai-retrieval-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/schema/: schemas.py
app/service/: chunking.py  embeddings.py  ingestion.py  llm_router.py  retrieval.py
core/: config.py  logging.py  pricing.json
ui/: streamlit.py
